--- a/.hintrc
+++ b/.hintrc
@@ -16,6 +16,12 @@
         "image-alt": "off"
       }
     ],
-    "button-type": "off"
+    "button-type": "off",
+    "axe/name-role-value": [
+      "default",
+      {
+        "link-name": "off"
+      }
+    ]
   }
 }
